@@ -1,3 +1,7 @@
+2011-02-12  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Fix: Cleanup window error.
+
 2011-02-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: `fsvn-browse-diff-local' sequence is wrong.
